// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders the component 1`] = `
<div>
  <div
    class="spinner visible"
  >
    <div
      class="detail"
    />
  </div>
</div>
`;

exports[`Spinner renders the component 2`] = `
<div>
  <div
    class="spinner"
  >
    <div
      class="detail"
    />
  </div>
</div>
`;
